--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
