--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.15.2",
     "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "pg": "^7.4.3",
     "sqlite3": "^4.0.2"
   },
